Addressed spacing issues in tools rail

--- a/app/assets/stylesheets/_item.scss
+++ b/app/assets/stylesheets/_item.scss
@@ -248,12 +248,12 @@ body.blacklight-catalog-show #document h1 {
     font-size: 14px;
     letter-spacing: 1.5px;
     margin: 0;
-    padding: 40px 0 20px;
+    padding: 30px 0 20px;
     text-transform: uppercase;
   }
 
   dd:last-child {
-    padding-bottom: 30px;
+    padding-bottom: 0px;
   }
 
   a, .checkbox.toggle_bookmark label span {
@@ -293,7 +293,7 @@ body.blacklight-catalog-show #document h1 {
 
     .caret {
       margin-left: 6px;
-      margin-top: -2px;
+      margin-top: -7px;
       -webkit-transition: transform .28s ease-out;
       transition: transform .28s ease-out;
     }
@@ -373,6 +373,7 @@ body.blacklight-catalog-show #document h1 {
 
   .dl-appears-in, .dl-more-details {
     padding-bottom: 0;
+    margin-top: 30px;
 
     dd {
       margin-bottom: 18px;
@@ -407,12 +408,12 @@ body.blacklight-catalog-show #document h1 {
 
   .permalink {
     clear: both;
-    padding: 20px 0 30px;
+    padding: 20px 0 0px;
   }
 
   .fulltext {
     clear: both;
-    padding: 20px 0 40px;
+    padding: 20px 0 0px;
 
     span.fa {
       padding: 0 8px 0 1px;
@@ -424,6 +425,10 @@ body.blacklight-catalog-show #document h1 {
     opacity: 0.7;
   }
 
+}
+
+#tools .dl-iiif.dl-more-details.clearfix {
+  padding-bottom: 40px;
 }
 
 #feedback {
